codificacion de bibliografia

--- a/demo_bibliografia/bibliografia.resx
+++ b/demo_bibliografia/bibliografia.resx
@@ -117,4 +117,204 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="btnEliminar.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        /9j/4AAQSkZJRgABAQEBLAEsAAD/4QBWRXhpZgAATU0AKgAAAAgABAESAAMAAAABAAEAAAEaAAUAAAAB
+        AAAAPgEbAAUAAAABAAAARgEoAAMAAAABAAIAAAAAAAAAAAEsAAAAAQAAASwAAAAB/9sAQwABAQEBAQEB
+        AQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEB/9sA
+        QwEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEB
+        AQEBAQEB/8AAEQgAIwA3AwERAAIRAQMRAf/EAB0AAQABBAMBAAAAAAAAAAAAAAoJAgQFBgEDBwj/xAAx
+        EAABAwQBAwEHAwQDAAAAAAABAgMEBQYHERIIITETAAkKFBYiMhUXQSMmM2E0RlL/xAAcAQACAgMBAQAA
+        AAAAAAAAAAAABwgJAgMGBAH/xAA5EQACAgEDAwEEBQsFAQAAAAABAgMEBQAGEQcSITEIExRBCRUiUXEW
+        MjNTYYGRktHS8ENUc4SUsf/aAAwDAQACEQMRAD8AdqrZJ3s91HZKifzSTsrCVEkgKJICioBTiUvBtCzR
+        qAT32/V3fuEmsU4itG/blxhbN22lkXKOT7ksaos0LINw29YUq26RQsdWXca25LtuTLsuK6mVVauxo6pl
+        PpECUqIr5p9baeG3vnJsRVhWKR4VlSaWV4iFmZYewLDE5BCNK7gFwCVUMQCdSs9lrpbj+oefyM16hXyk
+        1GxjKGOqXkebGwWMi1hpsnkK6MjWoKFes7x1i6LPO6IzKvcwOxjKR1v9W/yf7DT860mOhyQmCiD1W5dj
+        T7hMNtTLkKB9eZaS/X5cdDiRJVRIqktObQ4lhCvS9lJVym7c2T9XPaQd32Al+UNNx6qnxNjulI55Yxjg
+        N9w8asNzuyfZ46XBo9719vXJSkZnextChJHREhPbJYGEw/u6MTkN7sW3DMgJXv47taFWrj6srEvOo46y
+        Dlfqutu+qPJVDqlq1jNeZ4tZjv8AAL0qF9Xeo624yhLzb7IcZeYSh5lxbXBXt4pszuitYapZvZOGyjdr
+        QvLKsgPrx288kceQRyCPPkeddbj+mnQnO4ivuDB7V2LkcHbjEtfJ1MbjZKjr3dvmX3XapDkI8b9ro/Ku
+        oYEDaaHk/LrqkOHP3UWh9KkrS4nP+Xi426lYdC+Ll4rbUpLoDmnG1pU4NqSo7B1flJnQefrW8ODz+nfj
+        x+JPjWNrox0uMbKNhbW7WBHKYagCVYEHgiDkEfIjyPkT66UZ7lrqgyxnPF2Wsa5huao39X8F3XbVNt6/
+        K0WnLgrtl3jQ5FUo0K4pjQQqp1mhS4FVguVVxpEidCXCcf8AWkGW+XjsfN2c1i3a4e+etIIjLwAZFI+y
+        Tx4LDg8+B8udVbe1L0ywfTffNRNuRCpi85Re8tFSSlSeOUJMsXPPbE4dGVB4Vg/ACkDU1iNhSdEpIPYp
+        LqCNNhPYsIcWDxAT9gUeACP8AS4rtdRk1R37edjQPYjwD4ClLPnQI5Eg6BUtfF1s0aGx8URV5VLy10oN
+        RlFKaljPLUKSArXJn6nsJ8g68/1GU6762Na2CpSY6vuUrYrg/nvOh/DhG/f6fP5c6s2+jmqx2cn1Adx5
+        qw4iaM8ejd9iPnn5HtkI5/dqCro5wz1AdRGR49u9Plt3Bd132jCbvKSxQbhgW5UKNSKROipdqcWr1SZE
+        jU9xmQ8wlh9surZeWhz0FpSoeykwuPyeVtLFjIZZp6wFjiKZYmSNGUFhI7KFZWI4PkjnwCONWF9Ud37G
+        2LgZL2+sjQxeKy0rYmKS/QnyFe1bswy9teWrWhlkmR0RyyN2h15TvBYaVN1dY765c51rpdyVizoxuKwM
+        zYViUZzId8XddOLq1c11VGhR4lMteFUK/ArMP9Zo8+K7Wnp7cymU81Jyq+iqKGmWkJb+crbiyL4a5RwM
+        ta/jwhtWJpabyyvGAkSvIsi98bAyd3ci95fjt4HArk6TZzovsyl1K25unq5js3tLeD2kwOGxeP3LUx2O
+        guPLYyFiChPTlFS5BIlNIGisT/DrV7xKWdm1Gb7xi0en3BVj48ztZce8rcujJF95CtrMWLyxAq1v4qyj
+        bgp8qvY/g1Kl7YpkiFNlypNOp06XIM6iSI82I8I8daDx+7aWNo16uTqpYhmt2rUOQpkI8NK5EFaWsroe
+        EKsWZEZm74yGUgDUkPZ83JvjduZz+x83NicjjduYTBZDaO5FaerkNz7bvtPFRzk1az9uzHPXiijsWIY4
+        /cXI3ilQvKDqQj4bHILOTKT1k3LGgO0+N9W4igsMvOJceW3Fty6Uh1wo4pQtzkT6SSviBr1DohXfdKJh
+        Nir7AcAW1HqCT9g+fH+fLUR/pAcWcRv7aVRpRK31DYkZlBCgvYiPaOfJAI9Txz9w0oAgkdvPfWgpR8/w
+        EONE7A3pK06H3bCCGUtXUAdcDwNaI0NceGtcVEH7AEaI3x19hTstgNeokmjQuPiqSpOVekEpJGrAyzoj
+        YO/1+xv5B4+Na/nWtaRwASfWP9Bh/wDks/h+YP8AP4atL+jRAbKdTAwBHwOI8Ec/68uoc/dR16pfv3k/
+        H8OXPRIy10tdRthU1qEt5Ut6vSMaVmtUJMUNrSr1hUqMyUp2Asbb2kr2FnsuVvrK3WBbm7iMnWQKSD7w
+        1JJI+P2ho+R+HGpw+0xQrfkRt7OSxQFNr9R9hZudpUT3a049wVal3v7lICGvbcEgcj19BpQEm/K3kCsf
+        Kol3Ep7Ll3e55FTLT8hMgwINj1G9b1MhZUAEqRbEp2c4hI5qQJDqSU8PZuGw9iTgPLxem2T3eWHCrXex
+        Pz59CIT3Afjx99dSYWlhKSv7qiBtfF+1R8P3RxMvvpcxBh8OF5BPcrZCNYA3PHd2qfJOiS9Q/Uzk+58h
+        9XOOKPU26tjfNvUJc19TqA9AarIFZod4V829W7cfksuzKTU3KXL/AE+bMpny71Tp5TFlpcZbabbTOSyl
+        +xazdOLmWtkcnNZaEKJSZI55PdSREgsjdjdjFOC6cKfAA1ZzsnYO1sPt/pfuXIRLQzmz9iY/DRZFrRor
+        8JexNL46nkFV0htV0sxmaGKx3rXn7pIu12csnb4Wu3LgtzHnV4xcFDq9EffvXFy2GqtTpVOcebTb9yhS
+        2kTGWlOISVIClJCkJKkhX3lvTp6SQzQYe+k0UkTG4CFkRkJAQjnhgD8/u1Vx9Ihksdk+pO1psdep34l2
+        9IrSU7MNmNSZ4yAXhd1B488E86VurjolRSB33z9LXZZHcvhSPy/lYUOex/n5K9mzqvbVR7HuD5I7lR78
+        kjvzSlWyTskgKJ0paUOhptZo0TT4oDpqytftt9PPUFY9rVm67NxhEvy0chihU6TU5drx7ok27U6JcM5i
+        Gh59FFVIos2BOmFoMwn3oSnlp9Z4Mqnqphr2Tx1OxThef4OSUyxxqWftkUAMAPkODqwj6P8A6nbW2PvL
+        c+E3LkYMWdz0qUeOtWpFirtPVlkZoGkYgB370Kc+o7ySANEdwjk3LXT1lKzczYr+eod/WJU1Ve26pIoK
+        arGjynYcqC8JNMqMOTAnxZEKZJjSIsxh2O8y6tDjagfZEY9czi7kN6pTtR2a798Tmq7hW7WQ8o0bKwKs
+        wIIIIOraN3SdNt+bayu1Nx5zB3sFm6y1r9ePO1q0kkSyxzoYrEFqOeCRJYo5I5YnR1ZQQw1J5J9+P7zN
+        +I7FTdNiw0uRo0ZuRT+nnF0CZDRAgSKZTXIEuNZzb8J+kwJcmLSn4y23Kaw+41EUy2tST1jb13uy9vuu
+        0cKAVw9dWUKpRCjCqCpRSVQjjtBIXgHUeE9lz2WEkWQztIQ8kjJN1JzEscpmmSxYWaN8yyypZmjSSyjh
+        lndVaUMQCPtj4enFlu3Pdufcn1PHabxztCqNpW3jer3RSBKpdlxbgZrtUu6746Z0VbTFVU6zAY/U2x82
+        w2lcaGQ7LUFd30pxMQgyGRt1CL3v1jRp4uHSMgsxQOoILt5JAGom/SEdRchJldobM27nV/JZcVLatV8V
+        dV61qzG0UUSWHrSFJEhibhYmJAPBI5Gmn4xxxTscUV6Iy6uo1uqvpqFyVx4BMir1NSFBThCdluMwCpuH
+        HSSlhrYTyUuQW3NwB6DjVZTMzHlmZj97Ek/xPOvS0jZABI7+UlxJ/EeCy24odv8AwlR46SB6HFxRrHVT
+        6Qhakp2AHHwNkk6RKZaT3JJOkLUCSdqJC1ErCVA0at1MsykmNJabkR3ilp5l5CXG3W3HZbbiHELBSpKk
+        NpSQoEa2fKlFRr6CQQQSCDyCDwQfvBHkHWrfQ1k7T/Z1q/c2ws/29SO6nIL0hZ/4fbbqEq0OwA4ABBKT
+        r9zF+qj/AJF/pr1fH3h6XLY/7E39+u1yxLHCVkWbauwF/wDXqSfxRCUOxia7F50/75aPZKQk9zF+qj/k
+        X+mj4+9/vbf/AKJv79ZWk0ChUhxwUmi0ql+qtKXTTadEgF0JqQjJDhistFfFglAKySCeYPqfd7ZKqr4V
+        VUfcoA/+Aa0yzzTkGaaWYqOAZZHkIB9QC5JAP7NZIE7T/vhv+PJlg+PHZpvx40dd1r5Za1auIaEuusoX
+        spUrStKUgkfJtvdlIKVD+oonYIOjw/ABPsaNf//Z
+</value>
+  </data>
+  <data name="btnAgregar.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        /9j/4AAQSkZJRgABAQEBLAEsAAD/4QBWRXhpZgAATU0AKgAAAAgABAESAAMAAAABAAEAAAEaAAUAAAAB
+        AAAAPgEbAAUAAAABAAAARgEoAAMAAAABAAIAAAAAAAAAAAEsAAAAAQAAASwAAAAB/9sAQwABAQEBAQEB
+        AQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEB/9sA
+        QwEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEB
+        AQEBAQEB/8AAEQgAIAAgAwERAAIRAQMRAf/EABoAAAICAwAAAAAAAAAAAAAAAAkKAQMGBwj/xAAkEAAB
+        BAMAAgEFAQAAAAAAAAAFAgMEBgEHCAkTEQASFBUWM//EABwBAAICAgMAAAAAAAAAAAAAAAYHCAkBAgME
+        Bf/EACsRAAICAgIBBAIBAwUAAAAAAAECAwQFBgcREgAIEyEiIzEUFTIWJTNBQ//aAAwDAQACEQMRAD8A
+        ZG8gvkX2vV9wscL8KCQVk6llV8faNv7Ss0Fsxr3lmhnmcOhiZoa64iDYNp2SC80WqlWKqWHDCHxtnso0
+        +yYrNRtqG9wnuE0b26aPPuG5XEEsztUweIjPnezGRKF0r1q6kSShVHlIUKqi9tLJBCss8QvsWxjEGCjS
+        rf3DNXUeSrS+QRQwV0bxkyGQm6YwUo3/AFqUR5Z5iIoUJDsg2J3JOsy0pR7ru5nO0NkzM5kmSPRJKVtC
+        tIlP5ackRwOurKqfQagHW42j7AtMp9PrucNx1MgY2GWkt0P8ke+X3Hcv5C1Lruy7Dx7rbysKNfV8hLg7
+        KQFiE7yGNarZaQp0WElq4UPfUzAgAImzeXgcSXcuJ7JPbV6sa1qMXff644yXllC/x5zOWY9EqD9etWWT
+        RVH1rL/rOV5x7kG3D3MSBJvmopO1OCTIZU4qMydoVacj65t4ltbjuMAb1TrTXlYefw6Gfw+6lxg8I+7D
+        n3SchThynIOe3ej5x/1OP3G++xS2IgQGVbWSL5CJiR9mtdgcfa+YPXQxkN52LHSPZr2HZEYdwyx/NWPR
+        /wCNlJLRqw7BZJkI77B7AAKd4yPKbc9y7Jd4z7DarwrpeIEIHtU7NrcFsFTelKjX4+Xjj0cGlxcKsbbr
+        cBpwxZ6sHcyDsQNklbqnABwRNjq1VvB4i5ZwnLWtQ5vGqal2IJHlMXIf3UbBB7+j+RhcglC35L2AS4Ku
+        zK0ffMfuVeeNEFTLUVVr1AuJAI3bxS1Wk+jLWdvwJKq8Un65F+0dxo8i2mY3zwrpGXlwvu7vm9WHpm5H
+        0suyCsiNtgtMsOva0P8AYlU3Ieka6IVWp1YN/mNbR6obWG/hvNDfu9z2f5/91+5YawLdrVuLL50nAYSI
+        SSRyXqDpVycq10DGS5lc2trtlHyS1qtWqSfAD0CbTmDjLmRmXqTJ5fImpGy+UjpUosa1KtEg8mCeA+YK
+        F6a3bsSEeb/iUbjrSO0Im+6ya2Xqi1wK5HgWCc4RtlZnMjWiWRMn9c8+skx6cS8ylpzGy6n2ok5QtH2u
+        pTnEovaV7c921vmTXszvPGuWpa7jsbl7ENjPYX48dVyBx7JjJfCzGY47Ecj91iyB45lV18XRSOxpeLzQ
+        z8E2Vw92CssE7ia3AfjWQoDF5FwQH7BCE/YJ6BBPqrsvReyye9LWT13qKzlapOGg5CpdYq0uSIlT1h46
+        Sq0YgsZjuPrfQv8AMwhGVuSMuKcwp1a8q5vdl7eN5zfNWez3H3HOasYO5jcNbe9rmIY0ZcmtFVvzAVVC
+        G2Zow0/xoHkl7kcM7sTjd8TmJc5YbGYW1YpvWgLyVq/lDJIYyJR9DxLDr8/r7J7Ykn0tt2PZyPPlmpPQ
+        VaXICWznG91rf1UlZQ8zOFy9YnoxW8VeUj4xKwJsdWjG6xYBysY/LCmpY2S24jK0qL/ZvsGXxuz1adtb
+        Feyl7/TudrSo8LS/MWipvZibxKWILI8ZPJA6OkqkKWYekLrmXfWeVtWNYvDBl8lHiLELKVKrkXFKetIr
+        BWAhsPDOqN9I8SHrtB11xrexWfnzV+pNftYbG37h65SOfTw2cxl9sZYdBGItSrBSZCdWhUgLawFZqV0B
+        uOZTgrVbcCItO+kk07lRbdpeW4x93PJt5Ylju5vboOTdXs2YvKC6t/ISbEgRWCrNHVu2LNGZF/8ASjYT
+        yPh5+izmjLZDVc7TzcCj/a8rDkIxKvlF4TGGWGR1PXlF80IilPfQYkdg/Xo3fFvky2R0vveu6ks1L1+H
+        GlQlkJSCVe/oEkUPAxDxBrDKCBidGQ08619rqVtuLS3nOEuYV8K+rG+Kud9o3zbqetZTWcXjKs9G7ae9
+        UsW3k+SpCJVRI5yyBZT5d9szKvXizEE+ijjLnyff9sq6zLh6VP56N221ivYnkcNUiEnQSTsBG/Lskkgf
+        9no+p7S8mWx+Z97WHUlapevzI0SFrhFgjYcWBRFTxwQwQdw8geYgxlNMuPZS0lDbalIT8KXlXyrG3K3O
+        u0aHt1vXMTrOLyVWGjSsx3blm2krSW4fkdTFB4qUjY+PQYM3X+S99jPJ3Pc+gbVZ1uLD0rogpUra2JrM
+        yOWtxNJ4tHEOgqFR10QSO+z9jpU/r01aOydsVfRw3CDOxen9hM61eii4+WWMF962aONsU5MaP7FQw9Zr
+        sk5cDLqc5SJrIkiQccw3Edcwofb3qOVy+45rdMrCiWs7sjZy00MfwxfJFYnv2ZI4z2EjezYMMX2f8eiz
+        N9+o36PksjyVzLq0kaBmrZuTaco8KkQV4aU65Fy3Yb44nsRwVIySO5J41JHfYaa8kvjXu+3rUW6b5Rbr
+        yt1FwY0FuXTdoJNV6m9E1+uxPwq6Uh2Jxl2FTd2VUVj9DXrSYZXW7jWmx1KvUsRBCVO206SfM/CGB5do
+        4+xLMcPtmAZ5de2OCIPLX82V5KF1AVazjpnUSeAYSVp/3QfjJahszp37RMfvOJkpWGSG2sUiVrDR/JGV
+        kHTwWUBUyV3PTHrt4nHyRgn8Srna9v7K432LFstkzt7jvZlUkynIStw1Ilr18ZIywuGQwEuJ6FM1lfwK
+        48xUKTPrZ+6VAnFkpZdnEGJOEOIrX9J5R0PKwWrOuy2r9MvFDnNe+O9UtxOnxyNLU8TIkcqlvNJYYmPY
+        PxIR6r9ynCHMfG+yRbDo0eUWenJKaljGVjnIAsiPHIvUCyzyV5I3aNq9yiD4HpiT/GBI3d0J2hsCeU1S
+        H2v19te4yYuJZ3W1Zn32O88plMEc+ZtgWDC1lRAbEWGiNCn2Q9U6gNjRPS2/GYjqbSZnj3Y93y0mYz2O
+        uLYsNEJZ8hGKCmOJAiRpEwVxFGg8QkUbHrs/5N9+HHwvz5yXsdjMbNSyBu3pE/q8rm4RhKcUcaLHGBHM
+        I7JhhjUCKGlRYeI6VSOyzNniJ8Plj5etSutOt5AM/wBQEhJEXr+iBCKbFVefq/Y42I9gdxYPW3Ftm3bN
+        AUoNZLUMawCrQFwhT6ZKJjithslnkXq+r0NYorVqJGZCirJKkYQeK/fxxr9lYwf4HY8iAxAP0J8cQcP4
+        binEzRwyjJ7Bklj/ALxmXj8DKIyTHSpRsztXoQk+QUsZbEn7pyOo44//2Q==
+</value>
+  </data>
+  <metadata name="Libro.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="Libro.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <data name="btnAceptar.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        /9j/4AAQSkZJRgABAQEBLAEsAAD/4QFkRXhpZgAATU0AKgAAAAgACAESAAMAAAABAAEAAAEaAAUAAAAB
+        AAAAbgEbAAUAAAABAAAAdgEoAAMAAAABAAIAAAExAAIAAAAmAAAAfgEyAAIAAAAUAAAApIdpAAQAAAAB
+        AAAAuIglAAQAAAABAAABJAAAAAAAAAEsAAAAAQAAASwAAAABV2luZG93cyBQaG90byBFZGl0b3IgMTAu
+        MC4xMDAxMS4xNjM4NAAyMDE4OjEyOjEyIDAwOjU3OjQwAAAFkAMAAgAAABQAAAD6kAQAAgAAABQAAAEO
+        kpEAAgAAAAMwMAAAkpIAAgAAAAMwMAAAoAEAAwAAAAEAAQAAAAAAADIwMTg6MTI6MTIgMDA6NTI6MDgA
+        MjAxODoxMjoxMiAwMDo1MjowOAAAAAABAAsAAgAAACYAAAE2AAAAAFdpbmRvd3MgUGhvdG8gRWRpdG9y
+        IDEwLjAuMTAwMTEuMTYzODQA/9sAQwABAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEB
+        AQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEB/9sAQwEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEB
+        AQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEB/8AAEQgAIgAgAwERAAIRAQMRAf/EABwA
+        AAICAgMAAAAAAAAAAAAAAAgKAgkAAQUGB//EAC4QAAEFAQABAgQEBgMAAAAAAAQBAgMFBgcRCBIAExQh
+        CRUxcRYyM0GCsbLC0//EABoBAAIDAQEAAAAAAAAAAAAAAAYIAAEFBAf/xAArEQACAgIBAwMEAgIDAAAA
+        AAABAgMEBREGABITByExFCJBUUJhIyQyQ1L/2gAMAwEAAhEDEQA/AGrfVr66s7wrSV3IsSOFqux3sEMz
+        wCCPl1OPDLhWYWw0UsbZHJPIM150NexqzKE1hEsatJFZOD815xj+HVYvIotZO6WShQVwpkKj7553GzFW
+        i2DI/aWc6SNSx2ozyTkkGBSpAqrYymSdo8fTZ+wOIxuWzYYBmjqQDZd1Vndh44lLdxQDz+ybnUTuP2fb
+        uiFGze5zg8ffy4KlDV/nzEBFnnD3Cxx+fDHm3Jcqq1HKrU8Mb4Jf5/nclI0lnN34FJJWvi5Dja0Y99Kh
+        rkWnA/DTWZHPySPYAPkmtXT5MhnMgzH/AKMfOcZVj3/GMVtWGA+O6azK5+Sfx1Ku7NusrM0/Fds6BAZF
+        7XNB2d7JvKQ1WIniI+O/dPdJHJ7fD5A7keRquV/h6e6N90PUDO4yRZK2Zu2EB21bKSHI15R+VZpybce/
+        /UNlGHzojam4rFukfJj85fDD38GRmOTqy6/jILO7Kg/HfDZjdd72R9pPf0keuXOd8vbTlOvgEy3ZM6PM
+        RPUwTpJVaoIOOJxVnnJ5EY6V0UMsRcwT2MmaHIpLImpCXEL77wvm2O5jTleACtkaZVMhQZw7Qu2+yWJv
+        tMtabRMUhRSCCjqrLomHHOR189HaiKrXyeOkWHI0u/v8ZYbisQtoGWpOPeKQqrBto6qw91Q3dt1PReiG
+        eoO4YPa6Hc7CfoxdbdSWL68mtuLL8wGyxb6o+rs4KuHOPHzbVrbAEoMONrg54ZYmORT+fcgF/wBQslcv
+        wvepYzINQSj55K6vVos0LwrKnc8ImlEsjsgDEyNogkELTzLkc83PbuRcGeLFXTRr1zI0aNWos0Lxdyfc
+        iTuJZJCumJlYggkEWSZR/Muy4vB7sAi15EfpV6RlLvM1ehxd7nwehcyBL076qrm6h0/HakiXX4gvMXlb
+        C19mDXz3Xy7C1EEELJhOoOB4DlGOxucw2QtYGDI0rLnHsYMkkVygZPq4EltX61uSQoocBYmjVB3PJGG6
+        9FpfRZzH0MpUnmxi3ILYar5K1pI7dEO80KPau1rDs8QSRQEZFDbeRBvrry4Ia4zRWiyHVvzBIsv0XXRC
+        2wGFfElTzepMtLV0thgeu9Dgkec8RtdX/QRmNQ6eKKyWtVyIuJkfTKxUxtrJ1+SRWIa1C7kOySg8ReGk
+        r96iSGzbiEjuhjjHfpmKnY3ocdunYioz3q2UilWKlcvBJYFUGKkjtIDJXtWk7mZOxACQWIBK76r9oe06
+        XkfRM13sE+eO753qqjbEyxSLGpdTVGQu0FTJ4X7h2mcWyqZ4l8tcOS5q/dEVBv0uzdjFc4w7rI3jyVhc
+        bbTZ7ZY7ZCR9wHyY5xDIv9r/AGdgnAOQW6vN8dbklZhlbIx1xQdLJHd1DGCN61DN4JE3sgxj5998FoeZ
+        X3FdJo+O6aCaC85fe2mGL+exY3FQZ8uQGrs40X+ca3qYwbUWZvlkw5kcjVVHIvxz+p2Hnw3Nc3HKjLHd
+        tyZKs5B7ZIbrGYlSfkJKZYj+mQjrj9RMTNieX5iORCsV2w2Sqvo9skF1jNtT77Ecplhb3OniYfjoqvSl
+        3aDjdZ1SG1LgMqxzec9UosczpGl5nd6TYZC2Nzh4WfsqjDbWpu4bnNaKEfYZ+5SncZTUdaYCW+atV4hd
+        6b8zq8e49mkyTrJXx12repVY7cMF21LbV6tmtXhmilE0RQLNMAYwuiS/vrrX4RyeHCYrKrccPDVs1L9a
+        qlwVrVmZ++vNBArQTiWNo2Dzo3jAVAQ/zr0OX1UZPU8v6VlK/O3+PvBeX3WfoH7/ALvPvCL4LX7vMz6G
+        GlCThtATb6QIBk0caWW3rHQUE9hO2K0+mfHFo5XnmHzXEs/DQSxUsQ46HHImVs4xZ7Md7JLPMakdOpHP
+        NKqI6yqrRV1i07q0u2bQvcxxuT4/mIKsc9SxHj1pxrkLtR5LCW78cs/06QUI5ZZkjBDDyxxiHbMrv93Q
+        O4/lVx3TZZDi9CNMVY9Q01NjHJCxXqLVW5sUWgs5fHn2DVNA2zsiZV8NjhFeq/fwig3pXh58vzfCiJCY
+        sfYGTsvolY4qf+RCx/HfP4ox/bfoEgb9N8TNluYYkRoTFQnGTsuBtY4qREqlj8DyTiGJfyWkGv2GoPXB
+        +Hjk/VBM7f5YqDI9aGAjCnsvktWu1UAcTmV490xvtX60SNGijWCOSRwjYhSH/KHHdE13POA43nFBYpnF
+        TJVQ5oZFU72iLaJhmTYMtaQgd6gh1IDxsCCGZLmvDafMKEcMjitkKncaF4L3ePv93gmUaMlaQ6YqCGRx
+        3xnZZXX83voO9V3PrOevP43rb6GKVY4rPIV0+mBJb7kayViVbJzIWP8ALfapQsHlV8J58efhUcx6V84w
+        87xnCWcjCraS1i1N2GRfwwSIfURg/qaGMg+3S05X075dipmjfEWbkYbSWcehuQyDfsw8QMse/wBSxxkH
+        21vqfP8A0F+q3odmPXg8e1Wfgllaya02AE2ZCFZ7va+Z7LNsJszGeHKv0ok33Twqoi+fi8N6Vc3zE6Rj
+        C2MbCx++3lB9HFGu/dvHJ/sSa/Aihck/r56vFenXLsrKqJiLFOIsA9nIqacKDei2pQJZNa+IYpG/r89M
+        E+iD8PfJelx38c6QkfWdaMrngJbpCiA5kUtifmAtG2RVVpJrU+QUf/U+kaokL/lzkuIbHgvA8bwjHtBW
+        b6rIWQrZDIOgV52X/jFEvuYq0ZJ8cfcSSS7lmPsy/DOHUuH49oImFm/a7Gv3iva0zJvshiUkmOtESSib
+        LMxLuSxHbZD/AGb+z/8AS/B10ZdY79E/Zv8A2+J1OtJ+if5/8fidTqX/AJ/E6nX/2Q==
+</value>
+  </data>
+  <data name="btnCancelar.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAABWBJREFUWEft
+        lgtQ1FUUxs/iuu6g5OSDqTZ8oIQPfAxqzaQ14QMxJAMhyUeIKKCZQykqSoCwgoYKKkKKgoagqYEPEpCp
+        lNeGorCQuhEsGqnQOChqiKPyde7uYquprUbONOM385tl93/Pd849994/l57r/y6JgWcmkUzGWDCWjMKA
+        +Fv8Jp79JwWZMeaM9SS3Sa4xMTFKjUaTpz2nLavUVpadLD+ZZzPDRkn9yVWMMYwVMW0iKaNYunyp74mS
+        EwXNt5tbmm434erNq6i/UY/axlpUX6nGlPQpICXdpXmUTw7kK2IMsf9KoqX9lAnKxPrG+psNTQ240HgB
+        2itaaC5rUF5fjpKLJSisLUR0UTQolEDBTBjdpA8pUcQaPJ5Kovr+M1NmFnof8EbGmQxcu1SLS2fKcFyr
+        wrHzx3BEewSZv2QiXZOONHUanJ06IbwnQbKQi1Ayi6hQeBi8nkhiIymiE6O3ltaVori2GDlHd+NsWAjU
+        Tk74MXA+0k/tQUpFCraptyHheAK+2RuLkqFDcZQIK7gIs0AuIJKZSluFl8HTZJl7ferlm1WZ1ZxdlY2i
+        wgOo27cX9ampuJScDM3s2fjWaRRiM8MRmReJ7cmh0AYF4bS7u66A1iIkS7iAlbwcjro9ITamSRKVWq/K
+        WJWfdiYNObnbUZu4BRfi4lC7di3OR0Xh3IoVqAoIwP73HbA5wheV/v7QzJqFUyNH3itAV0Rv7kQ4FxHA
+        G1N/OkzqgsxutJ1rfFl8S8zJGKSmr8bPkRGoCQ5G9eLFusSV8+ZB4+OD0x4eKLaxQYWzM1RWVvclFyht
+        dB0ArePTYac7oiZtSAseqlRsVWDQzkHwOOSBiA1eKJ07B2e9vHDa0xM/ubmhfOJEqB0dUWxri6NSKX7g
+        hMbokovZxzLrGfbUeZsgS/lKyjPbxEFxBtYRxnh3xcHer0Blbw/V8OEo4s/vunRBNidrJctA6GscI07B
+        RiOPUMoT3voUj5ZYo1d7xZNavoWD4o3gmYx0JnwlJWRwklbSHyCI113XdjEB43gllbH3P54GXQHDU0jd
+        LYWDNhsRQxgxjpDGSQSpD2Ens8CK0Em8jL78K1bCk+mwxrQChCxHpVLB4IMcnGiA19B+AiGJE/Chvg9+
+        3f0Nf+5CxxCOE13k+I47CFYJVCC89SkeL4vXg2j19BOEdslswOs3hFsfx8YbjdjwENYb4W1NMA/j+G2E
+        fjyZwYEULbz1KR4v2UtjyD2oklp67iPYTSZwJL5gVj+CVQ8QZWBqH4JFAsFVRS093qUPhLc+xeMl1sh6
+        2n5SBVe2wwA/CZbICWFsaEwo49mPMPA9QmAH/feQBxgxljAulwvJoGK53PQXkZC5wpv8tvz2QvPckl6w
+        8THDAi5iMZu24jZAvzyUxC32JMznIgL5d8Eixn6MBMMy2iOiim719ae5wlNvbZpEpYq31siS8q+Nx8LS
+        UbD1k8Kfiwhgc5eBnJhbS7uY3QxvMpupBD/D82GOUkzKscXOy90wfiM/fYp/RkJSmYz6jz/UvbDiRgR2
+        /RqICcvY8E2J/nh9zewxgo+trZcELh9ZIqZiBo5dfwfOh6VFsk40QHjpLZ9cMlHE2HU9k76vS2iuv1WK
+        HeeCMPn4ENjmdoZlZgd0z5SjT86LcFHZI6F6OWqaDuBQnXvz6Fh5MicXd4GnvpC0Sncl6+HT2W/Z4WlF
+        qoaslj/u/I7rd2tw8ZYaF5vVaLxTg4bbVThyeVPLxwftixQ+7f1EjCG2TXTvUvqyQ+fJLp+/EbUgd3p+
+        eMFnZSH5n5TNyXbOd1jWN7Lr2zI3McYwts0upcYSG0m09Jlfyx8lkeyZJnyuNhbRn13SGGYrEd3TAAAA
+        AElFTkSuQmCC
+</value>
+  </data>
 </root>
